--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -18,24 +18,16 @@
 }
 
 .title {
-    font-size: min(12vw, 12rem);
+    font-size: clamp(4rem, 12vw, 12rem);
     font-weight: normal;
     margin-top: .25em;
     font-family: 'IceCreamParty';
 }
 
 .subtitle {
-    font-size: min(6vw, 4rem);
+    font-size: clamp(2rem, 6vw, 4rem);
     margin-bottom: 1em;
     font-family: 'IceCreamParty';
+    text-align: center;
 }
 
-.image {
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    object-fit: cover;
-    object-position: 50% 50%;
-    height: 100vh;
-    width: 100vw;
-}
