--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,40 @@
 
 * {
     font-family: 'IceCreamParty';
+    overflow: clip;
+}
+
+.image {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    object-fit: cover;
+    object-position: 50% 50%;
+    height: 100vh;
+    width: 100vw;
+}
+
+header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(49, 49, 49, .5);
+}
+
+button {
+    font-size: clamp(1.5rem, 4vw, 3rem);
+    background: none;
+    border: none;
+    color: white;
+    margin: 0 2vw;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: scale 200ms;
+}
+
+button:hover,
+button:focus {
+    scale: 1.1;
 }
